--- a/nextpage/nextpage.html
+++ b/nextpage/nextpage.html
@@ -148,7 +148,7 @@
             Halo, nama saya Muhammad Haqil Abdillah. Saya seorang Mahasiswa Universitas Kuningan Program Studi Teknik Informatika 
             yang memiliki ketertarikan dalam bidang teknologi. Saya mulai tertarik pada dunia Informatika sejak SMK, dan sejak itu 
             saya terus mengembangkan keterampilan serta pengetahuan saya. Saya memiliki keahlian dalam pemograman terutama dalam bahasa 
-            C++ serta pengalaman dalam menggunakan berbagai alat dan teknologi seperti memprogram pada arduiono,  dan lain-lainya yang 
+            C++ serta pengalaman dalam menggunakan berbagai alat dan teknologi seperti memprogram pada arduino,  dan lain-lainnya yang 
             mengenai bahasa C++. Saya percaya bahwa pembelajaran adalah proses seumur hidup, 
             sehingga saya selalu berusaha untuk mempelajari hal-hal baru yang relevan dengan profesi saya.
             
