--- a/nextpage/nextpage.html
+++ b/nextpage/nextpage.html
@@ -147,7 +147,7 @@
           <p>
             Halo, nama saya Muhammad Haqil Abdillah. Saya seorang Mahasiswa Universitas Kuningan Program Studi Teknik Informatika 
             yang memiliki ketertarikan dalam bidang teknologi. Saya mulai tertarik pada dunia Informatika sejak SMK, dan sejak itu 
-            saya terus mengembangkan keterampilan serta pengetahuan saya. Saya memiliki keahlian dalam pemograman terutama dalam bahasa 
+            saya terus mengembangkan keterampilan serta pengetahuan saya. Sekarang saya sedang meningkatkan keahlian dalam pemograman terutama dalam bahasa 
             C++ serta pengalaman dalam menggunakan berbagai alat dan teknologi seperti memprogram pada arduino,  dan lain-lainnya yang 
             mengenai bahasa C++. Saya percaya bahwa pembelajaran adalah proses seumur hidup, 
             sehingga saya selalu berusaha untuk mempelajari hal-hal baru yang relevan dengan profesi saya.
