--- a/nextpage/nextpage.html
+++ b/nextpage/nextpage.html
@@ -26,10 +26,6 @@
           <p class="title">Learning to  be a programmer</p>
         </div>
 
-        <button class="info_more-btn" data-sidebar-btn>
-
-          <ion-icon name="chevron-down"></ion-icon>
-        </button>
 
       </div>
 
@@ -48,7 +44,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="haqilabdillah@gmail.com" class="contact-link">haqilabdillah@gmail.com</a>
+              <a href="mailto:haqilabdillah@gmail.com" class="contact-link">haqilabdillah@gmail.com</a>
             </div>
 
           </li>
@@ -137,7 +133,7 @@
 
 
 
-      <article class="about  active" data-page="about">
+      <article class="about active" data-page="about">
 
         <header>
           <h2 class="h2 article-title">About me</h2>
@@ -147,9 +143,9 @@
           <p>
             Halo, nama saya Muhammad Haqil Abdillah. Saya seorang Mahasiswa Universitas Kuningan Program Studi Teknik Informatika 
             yang memiliki ketertarikan dalam bidang teknologi. Saya mulai tertarik pada dunia Informatika sejak SMK, dan sejak itu 
-            saya terus mengembangkan keterampilan serta pengetahuan saya. Sekarang saya sedang meningkatkan keahlian dalam pemograman terutama dalam bahasa 
-            C++ serta pengalaman dalam menggunakan berbagai alat dan teknologi seperti memprogram pada arduino,  dan lain-lainnya yang 
-            mengenai bahasa C++. Saya percaya bahwa pembelajaran adalah proses seumur hidup, 
+            saya terus mengembangkan keterampilan serta pengetahuan saya. Sekarang saya sedang meningkatkan keahlian dalam pemograman
+            terutama dalam bahasa C++ serta pengalaman dalam menggunakan berbagai alat dan teknologi seperti memprogram pada arduiono,
+            dan lain-lainya yang mengenai bahasa C++. Saya percaya bahwa pembelajaran adalah proses seumur hidup, 
             sehingga saya selalu berusaha untuk mempelajari hal-hal baru yang relevan dengan profesi saya.
             
           </p>
@@ -158,6 +154,7 @@
         <heade2r>
           <h2 class="h2 article-title">My Pictures</h2>
         </header2>
+        
         <div class=" kumpulan-card">
             <div class="card">
                 <img src="../assets/foto-profil.png" alt="Deskripsi Foto" class="card-img">
